OS, browser, cpu, and memory fingerprinting. Consolidated all fingerprinting functions into one.

--- a/app/client/styles.css
+++ b/app/client/styles.css
@@ -31,3 +31,9 @@ button {
     background-color: rgb(10, 20, 70);
     font-size: 15px;
 }
+#left{
+    float: left;
+}
+#right{
+    float: right;
+}
