--- a/app/client/styles.css
+++ b/app/client/styles.css
@@ -9,6 +9,7 @@ header {
 body{
     background-color: rgb(20, 20, 20);
     padding-top: 90px;
+    text-align: center;
 }
 footer {
     text-align:center;
@@ -25,22 +26,32 @@ p{
     color:darkgrey;
     font-size: 20px;
     white-space: pre-line;
-    padding: 0;
-    margin: 0;
 }
 label {
     color:darkgrey;
     font-size: 20px;
+    margin-right: 15px;
 }
 button {
     color:darkgrey;
     background-color: rgb(10, 20, 70);
     font-size: 15px;
 }
-#left{
-    float: left;
-    padding-right: 110px;
+select {
+    color:darkgrey;
+    background-color: rgb(10, 20, 70);
+    font-size: 15px;
+    margin-right: 15px;
 }
-#right{
-    float: left;
+#top{
+    margin: 0 auto;
+    border-style: solid;
+    padding: 20px;
+    border-color: rgb(10, 20, 70);
+}
+#bottom{
+    margin: 0 auto;
+    border-style: solid;
+    border-color: rgb(10, 20, 70);
+    height: 450px;
 }
