--- a/client/style.css
+++ b/client/style.css
@@ -21,7 +21,6 @@ header {
     box-sizing: border-box;
 }
 footer {
-    position: absolute;
     text-align: center;
     bottom: 0;
     left: 0;
@@ -55,6 +54,9 @@ input {
 
 #store_view {
     margin-top: 6vh;
+}
+.item_wrapper {
+    display: inline;
 }
 .store_item {
     display: inline-block;
