--- a/client/style.css
+++ b/client/style.css
@@ -10,7 +10,6 @@ header {
     top:0;
     left:0;
     background-color: orangered;
-    display: flex;
     justify-content: center;
     height: 6vh;
     padding: 0;
@@ -97,6 +96,13 @@ input {
     color: inherit;
     text-decoration: none;
 }
+
+#search {
+    display: block;
+    width: 90%;
+    float: right;
+}
+
 .product_image {
     height: 15vw;
     width: 20vw;
