--- a/src/style.css
+++ b/src/style.css
@@ -1,192 +1,1 @@
-/*Main Webpage Stylesheet*/
-/*SCSS declarations*/
-/***********************************/
-/*main web page color*/
-/*vertical space taken by floating header*/
-/*declaration for a solid black border*/
-/***********************************/
-/*global styling*/
-/***********************************/
-/*fit html to whole page*/
-html {
-  min-height: 100%;
-}
-
-/*remove body margin*/
-body {
-  margin: 0;
-}
-
-/*global paragraph styling*/
-p {
-  margin: 0;
-  font-size: 15px;
-}
-
-/*global button styling*/
-button {
-  background-color: orangered;
-  font-size: 15px;
-}
-
-/***********************************/
-/*floating header*/
-/***********************************/
-/*the containing header element*/
-header {
-  /*position header at top of page and fix it*/
-  position: fixed;
-  top: 0;
-  left: 0;
-  /*background color*/
-  background-color: orangered;
-  /*fixed height so exact top margin can be used by element below*/
-  height: 6vh;
-  /*fit full page width*/
-  width: 100%;
-  /*solid black border*/
-  border-style: solid;
-  border-color: black;
-  border-width: thin;
-  /*make the border included in the element width and height*/
-  box-sizing: border-box;
-}
-
-/*font styling of main title in header*/
-header h1 {
-  font-size: 20px;
-  /*center heading in header*/
-  text-align: center;
-  margin: 0;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
-/*dropdown menu class*/
-.dropdown {
-  /*position the dropdown menu in the top left corner of the header*/
-  position: absolute;
-  left: 0;
-  /*fit div size to content*/
-  display: inline-block;
-  /*make height fit to full height of header*/
-  height: 100%;
-  /*font styling*/
-  font-size: 30px;
-  /*solid black border*/
-  border-style: solid;
-  border-color: black;
-  border-width: thin;
-}
-
-/*class for content within dropdown menu*/
-.dropdown-content {
-  /*hidden while mouse is not hovering over element*/
-  display: none;
-  /*background color*/
-  background-color: orangered;
-  /*fit width to width of dropdown menu*/
-  width: 100%;
-  /*align text items to the left*/
-  text-align: left;
-}
-
-/*on mouse hover the dropdown content class will display underneath the dropdown menu class*/
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
-/*dropdown content text styling*/
-.dropdown-content p {
-  border-style: solid;
-  border-color: black;
-  border-width: thin;
-}
-
-/*dropdown menu title styling*/
-.dropdown h1 {
-  height: 100%;
-}
-
-/*removing the blue highlighting from the dropdown content hyperlinks*/
-.dropdown-content a {
-  color: inherit;
-  text-decoration: none;
-}
-
-/*search bar in header*/
-#search {
-  /*position in bottom right and leave space on the left for dropdown menu*/
-  display: block;
-  float: right;
-  width: 90%;
-}
-
-/***********************************/
-/*web store styling*/
-/***********************************/
-/*store containing div*/
-#store_view {
-  /*set top margin to floating header height as to not have overlap*/
-  margin-top: 6vh;
-}
-
-/*wrapper div for store items*/
-.item_wrapper {
-  /*display store items inline*/
-  display: inline;
-}
-
-/*individual store item class*/
-.store_item {
-  /*set the store item divs to the width of their content*/
-  display: inline-block;
-  /*solid black border*/
-  border-style: solid;
-  border-color: black;
-  border-width: thin;
-  /**/
-  width: 33%;
-  box-sizing: border-box;
-}
-
-/*font styling of titles of store items*/
-.store_item h2 {
-  margin: 0;
-}
-
-/*store item quantity selector*/
-.store_item input {
-  width: 3vw;
-}
-
-/*store item images*/
-.product_image {
-  /*sets size of image*/
-  height: 15vw;
-  width: 20vw;
-  /*remove top padding and pad sides to fit in with other elementss*/
-  padding: 0 4vw;
-}
-
-/***********************************/
-/*non-floating/absolute footer*/
-/***********************************/
-footer {
-  /*align text in center*/
-  text-align: center;
-  /*position at bottom of page*/
-  bottom: 0;
-  left: 0;
-  /*fit full page width*/
-  width: 100%;
-  /*background color*/
-  background-color: orangered;
-  /*solid black border*/
-  border-style: solid;
-  border-color: black;
-  border-width: thin;
-  /*make the border included in the element width and height*/
-  box-sizing: border-box;
-}
-
-/***********************************/
+html{min-height:100%}body{margin:0}p{margin:0;font-size:15px}button{background-color:#ff4500;font-size:15px}header{position:fixed;top:0;left:0;background-color:#ff4500;height:6vh;width:100%;border-style:solid;border-color:#000;border-width:thin;box-sizing:border-box}header h1{font-size:20px;text-align:center;margin:0;font-family:Verdana,Geneva,Tahoma,sans-serif}.dropdown{position:absolute;left:0;display:inline-block;height:100%;font-size:30px;border-style:solid;border-color:#000;border-width:thin}.dropdown-content{display:none;background-color:#ff4500;width:100%;text-align:left}.dropdown:hover .dropdown-content{display:block}.dropdown-content p{border-style:solid;border-color:#000;border-width:thin}.dropdown h1{height:100%}.dropdown-content a{color:inherit;text-decoration:none}#search{display:block;float:right;width:90%}#store_view{margin-top:6vh}.item_wrapper{display:inline}.store_item{display:inline-block;border-style:solid;border-color:#000;border-width:thin;width:33%;box-sizing:border-box}.store_item h2{margin:0}.store_item input{width:3vw}.product_image{height:15vw;width:20vw;padding:0 4vw}footer{text-align:center;bottom:0;left:0;width:100%;background-color:#ff4500;border-style:solid;border-color:#000;border-width:thin;box-sizing:border-box}
