--- a/dev/style_dev.scss
+++ b/dev/style_dev.scss
@@ -5,12 +5,13 @@
 /*main web page color*/ 
 $primary_color: orangered;
 /*vertical space taken by floating header*/
-$header_space: 6vh;
-/*declaration for a solid black border*/
+$header_space: 7vh;
+/*declaration for a solid black border and removes margins*/
 @mixin black_border {
     border-style: solid;
     border-color: black;
     border-width: thin;
+    box-sizing: border-box;
 }
 /***********************************/
 
@@ -27,11 +28,6 @@ body {
 /*global paragraph styling*/
 p {
     margin: 0;
-    font-size: 15px;
-}
-/*global button styling*/
-button {
-    background-color: $primary_color;
     font-size: 15px;
 }
 /***********************************/
@@ -52,8 +48,6 @@ header {
     width: 100%;
     /*solid black border*/
     @include black_border();
-    /*make the border included in the element width and height*/
-    box-sizing: border-box;
 }
 /*font styling of main title in header*/
 header h1 {
@@ -70,8 +64,9 @@ header h1 {
     left: 0;
     /*fit div size to content*/
     display: inline-block;
-    /*make height fit to full height of header*/
+    /*set full height and partial width*/
     height: 100%;
+    width: 8%;
     /*font styling*/
     font-size: 30px;
     /*solid black border*/
@@ -106,11 +101,13 @@ header h1 {
     text-decoration: none;
 }
 /*search bar in header*/
-#search {
+#search_bar {
     /*position in bottom right and leave space on the left for dropdown menu*/
-    display: block;
-    float: right;
+    position: absolute;
+    right: 0;
+    bottom: 0;
     width: 90%;
+    height: 35%;
 }
 /***********************************/
 
@@ -134,7 +131,6 @@ header h1 {
     @include black_border();
     /**/
     width: 33%;
-    box-sizing: border-box;
 }
 /*font styling of titles of store items*/
 .store_item h2 {
@@ -143,6 +139,11 @@ header h1 {
 /*store item quantity selector*/
 .store_item input {
     width: 3vw;
+}
+/*store item add to cart button*/
+.store_item button {
+    background-color: $primary_color;
+    font-size: 15px;
 }
 /*store item images*/
 .product_image {
@@ -168,7 +169,5 @@ footer {
     background-color: $primary_color;
     /*solid black border*/
     @include black_border();
-    /*make the border included in the element width and height*/
-    box-sizing: border-box;
 }
 /***********************************/
