move menu icon position

--- a/dev/style_dev.scss
+++ b/dev/style_dev.scss
@@ -94,6 +94,7 @@ header {
 /*dropdown menu icon styling*/
 #menu_icon {
     height: 6.5em;
+    margin-left: 1em;
 }
 /*on mouse hover the dropdown content class will display underneath the dropdown menu class*/
 .dropdown:hover .dropdown-content {
