--- a/dev/style_dev.scss
+++ b/dev/style_dev.scss
@@ -25,6 +25,11 @@ html {
 body {
     margin: 0;
 }
+/*removing the blue highlighting from hyperlinks*/
+a {
+    color: inherit;
+    text-decoration: none;
+}
 /***********************************/
 
 /*floating header*/
@@ -43,14 +48,15 @@ header {
     width: 100%;
     /*solid black border*/
     @include black_border();
+    /*center heading in header*/
+    text-align: center;
     /*font styling of main title in header*/
     h1 {
         font-size: 4.2em;
         padding-top: 0.2em;
-        /*center heading in header*/
-        text-align: center;
         margin: 0;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
+        display: inline-block;
     }
 }
 /*dropdown menu class*/
@@ -74,6 +80,7 @@ header {
     /*background color*/
     background-color: $primary_color;
     @include black_border();
+    margin-top: 6.9em;
     /*dropdown content text styling*/
     h2 {
         font-size: 4em;
@@ -84,17 +91,24 @@ header {
         /*solid black border*/
         @include black_border();
     }
-    /*removing the blue highlighting from the dropdown content hyperlinks*/
-    a {
-        color: inherit;
-        text-decoration: none;
-    }
     z-index: 1;
 }
 /*dropdown menu icon styling*/
 #menu_icon {
     height: 6.5em;
+    /*parent is div fit to width, % cannot be used for horizontal spacing here*/
     margin-left: 1em;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+#cart_icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+    display: inline;
+    height: 6em;
+    margin: 0.1em 0.9% 0 0;
 }
 /*on mouse hover the dropdown content class will display underneath the dropdown menu class*/
 .dropdown:hover .dropdown-content {
