--- a/dev/style_dev.scss
+++ b/dev/style_dev.scss
@@ -168,15 +168,10 @@ header {
         touch-action: none;
     }
     /*store item add to cart button*/
-    .add_cart {
+    button {
         background-color: $primary_color;
         font-size: 2em;
         margin-left: 10%;
-    }
-    .remove_cart {
-        background-color: $primary_color;
-        font-size: 2em;
-        display: block;
     }
 }
 /*store item images*/
