--- a/dev/style_dev.scss
+++ b/dev/style_dev.scss
@@ -80,7 +80,7 @@ header {
     /*background color*/
     background-color: $primary_color;
     @include black_border();
-    margin-top: 6.9em;
+    margin-top: 6em;
     /*dropdown content text styling*/
     h2 {
         font-size: 4em;
@@ -159,20 +159,33 @@ header {
         font-size: 1.6em;
     }
     label {
-        font-size: 2em;
+        font-size: 2.2em;
     }
     /*store item quantity selector*/
     input {
-        font-size: 2em;
+        font-size: 2.2em;
         width: 15%;
+        text-align: center;
         touch-action: none;
     }
     /*store item add to cart button*/
     button {
         background-color: $primary_color;
-        font-size: 2em;
-        margin-left: 10%;
+        font-size: 2.2em;
+        text-align: center;
     }
+}
+.add_cart {
+    margin-left: 10%;
+}
+.update_cart {
+    width: 12%;
+}
+.remove_cart {
+    margin-left: 10%;
+}
+.cart_quantity {
+    width: 12%;
 }
 /*store item images*/
 .product_image {
