--- a/dev/style_dev.scss
+++ b/dev/style_dev.scss
@@ -232,18 +232,18 @@ footer {
 }
 
 #cart_head {
-    background-color: $primary_color;
     @include black_border();
+    text-align: center;
     h2 {
-        font-size: 3.6em;
-        display: inline-block;
-        margin-left: 10%;
+        text-align: left;
+        font-size: 3.4em;
+        margin-left: 6%;
     }
     button {
         background-color: $primary_color;
         font-size: 3em;
         text-align: center;
-        margin-left: 20%;
-        display: inline-block;
+        margin-bottom: 1em;
+        width: 80%;
     }
 }
